<?xml version="1.0"?>
<package format="2">
  <name>joy_utils</name>
  <version>0.1.0</version>
  <description>Joypad utilities</description>

  <maintainer email="naoki.mizuno.256@gmail.com">Naoki Mizuno</maintainer>

  <url type="website">http://wiki.ros.org/joy_utils</url>

  <license>MIT</license>


  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
